--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
       font-family:Inter, Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial;
       background:linear-gradient(180deg, var(--bg), #071019);
       color:#e6eef6;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
       min-height:100vh;
       display:flex;
       align-items:center;
@@ -42,7 +40,7 @@
       gap:20px;
       align-items:start;
     }
-    header h1{ margin:0; font-size:20px; letter-spacing:0.2px; }
+    header h1{ margin:0; font-size:20px; }
     header p{ margin:6px 0 0 0; color:var(--muted); font-size:13px; }
 
     .viewer-wrap{
@@ -54,7 +52,7 @@
       width:100%;
       height:520px;
       border-radius:8px;
-      background:linear-gradient(180deg,#071018,#001018);
+      background:#071018;
       box-shadow: inset 0 -20px 60px rgba(0,0,0,0.6);
       transition: opacity 0.3s ease;
     }
@@ -71,7 +69,6 @@
       border:1px solid rgba(255,255,255,0.03);
     }
     label.section-title{
-      display:block;
       font-weight:600;
       margin-bottom:8px;
       font-size:13px;
@@ -83,7 +80,6 @@
       gap:8px;
       max-height:240px;
       overflow:auto;
-      padding-right:6px;
     }
     .option{
       display:flex;
@@ -100,68 +96,41 @@
     .option::before {
       content: '';
       position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
+      inset: 0;
       background: linear-gradient(90deg, rgba(0,209,255,0.12), rgba(0,180,255,0.06));
       opacity: 0;
       transition: opacity 0.3s ease;
-      pointer-events: none;
       border-radius: 8px;
     }
     .option.selected {
-      border: 1px solid rgba(0,209,255,0.5) !important;
+      border: 1px solid rgba(0,209,255,0.5);
       box-shadow: 0 0 14px rgba(0,209,255,0.25);
     }
-    .option.selected::before {
-      opacity: 1;
-    }
-    .option input[type="checkbox"]{
-      width:18px; height:18px;
-      accent-color: var(--accent);
-    }
-    .option .meta{font-size:13px; color:var(--muted)}
+    .option.selected::before { opacity: 1; }
+    .option input[type="checkbox"]{ width:18px; height:18px; accent-color: var(--accent); }
+    .option .meta{ font-size:13px; color:var(--muted); }
     .option .qty{
-      width:50px;
-      padding:4px 6px;
-      font-size:13px;
-      border-radius:6px;
-      border:1px solid rgba(255,255,255,0.1);
-      background:rgba(0,0,0,0.3);
-      color:#fff;
-      text-align:center;
-      display:none;
+      width:50px; padding:4px 6px; font-size:13px; border-radius:6px;
+      border:1px solid rgba(255,255,255,0.1); background:rgba(0,0,0,0.3);
+      color:#fff; text-align:center; display:none;
     }
 
-    .summary{
-      font-size:13px;
-      color:var(--muted);
-      margin-top:8px;
-      min-height:36px;
-    }
-
-    form{display:flex; flex-direction:column; gap:10px}
-    input[type="text"], input[type="email"], textarea, select{
-      width:100%;
-      padding:10px;
-      border-radius:8px;
-      border:1px solid rgba(255,255,255,0.04);
-      background:rgba(0,0,0,0.25);
-      color:#eaf6ff;
-      font-size:14px;
+    .summary{ font-size:13px; color:var(--muted); margin-top:8px; min-height:36px; }
+    form{ display:flex; flex-direction:column; gap:10px; }
+    input[type="text"], input[type="email"], textarea{
+      width:100%; padding:10px; border-radius:8px;
+      border:1px solid rgba(255,255,255,0.04); background:rgba(0,0,0,0.25);
+      color:#eaf6ff; font-size:14px;
     }
     button{
-      padding:10px 14px;
-      border-radius:8px;
-      border: none;
+      padding:10px 14px; border-radius:8px; border:none;
       background:linear-gradient(90deg,var(--accent), #00b4ff 80%);
-      color:#01151a;
-      font-weight:700;
-      cursor:pointer;
+      color:#01151a; font-weight:700; cursor:pointer;
       box-shadow: 0 8px 24px rgba(0,209,255,0.08);
       transition: transform 0.2s;
     }
     button:hover { transform: translateY(-1px); }
-    .small{ font-size:12px; color:var(--muted) }
-
+    .small{ font-size:12px; color:var(--muted); }
     footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
     @media (max-width:980px){
@@ -171,7 +140,7 @@
   </style>
 </head>
 <body>
-  <div class="card" role="main">
+  <div class="card">
     <div>
       <header>
         <h1>Provercel — Barierowe rozwiązania 3D</h1>
@@ -179,30 +148,22 @@
       </header>
 
       <div class="viewer-wrap" style="margin-top:12px;">
+        <!-- DZIAŁAJĄCY MODEL DOMYŚLNY -->
         <model-viewer id="mv"
-          src="https://modelviewer.dev/shared-assets/models/DamagedHelmet.glb"
-          alt="Stalowa bariera ocynkowana"
-          camera-controls
-          auto-rotate
-          ar
+          src="https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/DamagedHelmet/glTF-Binary/DamagedHelmet.glb"
+          alt="Bariera ocynkowana"
+          camera-controls auto-rotate ar
           ar-modes="webxr scene-viewer quick-look"
-          exposure="1.2"
-          shadow-intensity="1"
-          environment-image="neutral"
+          exposure="1.0" shadow-intensity="1"
           camera-orbit="0deg 75deg 2.5m">
 
-          <button slot="ar-button" style="background:#00d1ff; color:#000; border:none; padding:10px 20px; border-radius:8px; font-weight:700; margin:12px;">
+          <button slot="ar-button" style="background:#00d1ff;color:#000;border:none;padding:10px 20px;border-radius:8px;font-weight:700;margin:12px;">
             Zobacz w AR
           </button>
-
-          <div slot="fallback" style="text-align:center; padding:20px; color:#aaa; font-size:14px;">
-            Model nie załadował się. <br>
-            <a href="#" onclick="location.reload()" style="color:#00d1ff; text-decoration:underline;">Odśwież stronę</a>
-          </div>
         </model-viewer>
       </div>
 
-      <div style="margin-top:14px; display:flex; gap:10px; align-items:center;">
+      <div style="margin-top:14px;display:flex;gap:10px;align-items:center;">
         <button type="button" id="resetView">Resetuj widok</button>
         <div class="small">Obracaj myszką, przybliż gestem.</div>
       </div>
@@ -212,10 +173,11 @@
       <div class="panel">
         <label class="section-title">Wybierz elementy</label>
         <div class="options" id="optionsList">
-          <!-- SŁUP STALOWY -->
+
+          <!-- SŁUP -->
           <label class="option">
-            <input type="checkbox" class="item-check" data-name="Słup stalowy H=1000" data-sku="SLP-1000" 
-                   data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/MetalRoughSpheres/glTF/MetalRoughSpheres.gltf">
+            <input type="checkbox" class="item-check" data-name="Słup stalowy H=1000" data-sku="SLP-1000"
+                   data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/MetalRoughSpheres/glTF-Binary/MetalRoughSpheres.glb">
             <div style="flex:1">
               <div><strong>Słup stalowy H=1000</strong></div>
               <div class="meta">SKU: SLP-1000 • Ø 60 mm • ocynk</div>
@@ -223,10 +185,10 @@
             <input type="number" class="qty" min="1" value="1">
           </label>
 
-          <!-- PRZĘSŁO PROSTE 2m -->
+          <!-- PRZĘSŁO -->
           <label class="option">
-            <input type="checkbox" class="item-check" data-name="Przęsło proste 2m" data-sku="PRZ-2000" 
-                   data-model="https://modelviewer.dev/shared-assets/models/Chair.glb">
+            <input type="checkbox" class="item-check" data-name="Przęsło proste 2m" data-sku="PRZ-2000"
+                   data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Lantern/glTF-Binary/Lantern.glb">
             <div style="flex:1">
               <div><strong>Przęsło proste 2m</strong></div>
               <div class="meta">SKU: PRZ-2000 • siatka 50x50 • ocynk</div>
@@ -234,10 +196,10 @@
             <input type="number" class="qty" min="1" value="1">
           </label>
 
-          <!-- ZŁĄCZE KĄTOWE 90° -->
+          <!-- ZŁĄCZE -->
           <label class="option">
-            <input type="checkbox" class="item-check" data-name="Złącze kątowe 90°" data-sku="ZLK-090" 
-                   data-model="https://modelviewer.dev/shared-assets/models/BoomBox.glb">
+            <input type="checkbox" class="item-check" data-name="Złącze kątowe 90°" data-sku="ZLK-090"
+                   data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/BoomBox/glTF-Binary/BoomBox.glb">
             <div style="flex:1">
               <div><strong>Złącze kątowe 90°</strong></div>
               <div class="meta">SKU: ZLK-090 • śruby M8 • ocynk</div>
@@ -245,10 +207,10 @@
             <input type="number" class="qty" min="1" value="1">
           </label>
 
-          <!-- STOPKA MONTAŻOWA -->
+          <!-- STOPKA -->
           <label class="option">
-            <input type="checkbox" class="item-check" data-name="Stopka montażowa 150mm" data-sku="STP-150" 
-                   data-model="https://modelviewer.dev/shared-assets/models/WaterBottle.glb">
+            <input type="checkbox" class="item-check" data-name="Stopka montażowa 150mm" data-sku="STP-150"
+                   data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/WaterBottle/glTF-Binary/WaterBottle.glb">
             <div style="flex:1">
               <div><strong>Stopka montażowa 150mm</strong></div>
               <div class="meta">SKU: STP-150 • 4 otwory • ocynk</div>
@@ -256,10 +218,10 @@
             <input type="number" class="qty" min="1" value="1">
           </label>
 
-          <!-- OSŁONA KRAWĘDZIOWA -->
+          <!-- OSŁONA -->
           <label class="option">
-            <input type="checkbox" class="item-check" data-name="Osłona krawędziowa" data-sku="OSL-001" 
-                   data-model="https://modelviewer.dev/shared-assets/models/DamagedHelmet.glb">
+            <input type="checkbox" class="item-check" data-name="Osłona krawędziowa" data-sku="OSL-001"
+                   data-model="https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/FlightHelmet/glTF-Binary/FlightHelmet.glb">
             <div style="flex:1">
               <div><strong>Osłona krawędziowa</strong></div>
               <div class="meta">SKU: OSL-001 • guma + stal</div>
@@ -273,135 +235,4 @@
 
       <div class="panel">
         <label class="section-title">Szczegóły zapytania</label>
-        <form id="requestForm" action="https://formsubmit.co/provercel@proton.me" method="POST">
-          <input type="text" name="_honey" style="display:none">
-          <input type="hidden" name="_next" value="https://provercel.vercel.app/">
-          <input type="hidden" name="_subject" id="formSubject" value="Zapytanie z Provercel - 3D">
-
-          <label class="small">Firma / Imię</label>
-          <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" />
-
-          <label class="small">Adres e-mail</label>
-          <input type="email" name="client_email" placeholder="twoj@proton.me" required />
-
-          <label class="small">Uwagi</label>
-          <textarea name="notes" rows="3" placeholder="Dodatkowe informacje (termin, montaż, itp.)"></textarea>
-
-          <input type="hidden" name="selected_items" id="selected_items" value="">
-
-          <button type="submit">Wyślij zapytanie</button>
-        </form>
-
-        <footer>
-          <div class="small">Wiadomości na <strong>provercel@proton.me</strong>.</div>
-        </footer>
-      </div>
-    </aside>
-  </div>
-
-  <script>
-    const mv = document.getElementById('mv');
-    const optionsList = document.getElementById('optionsList');
-    const summary = document.getElementById('summary');
-    const hiddenInput = document.getElementById('selected_items');
-    const formSubject = document.getElementById('formSubject');
-    const form = document.getElementById('requestForm');
-
-    const DEFAULT_MODEL = 'https://modelviewer.dev/shared-assets/models/DamagedHelmet.glb';
-
-    function loadModel(src) {
-      if (mv.src === src) return;
-      mv.style.opacity = '0.5';
-      mv.src = src;
-      mv.addEventListener('load', () => {
-        mv.style.opacity = '1';
-        mv.cameraOrbit = '0deg 75deg 2.5m';
-        mv.jumpCameraToGoal();
-      }, { once: true });
-    }
-
-    function updateHighlights() {
-      const options = optionsList.querySelectorAll('.option');
-      options.forEach(option => {
-        const checkbox = option.querySelector('.item-check');
-        option.classList.toggle('selected', checkbox.checked);
-      });
-    }
-
-    optionsList.addEventListener('change', (e) => {
-      if (e.target.classList.contains('item-check')) {
-        const qtyInput = e.target.closest('.option').querySelector('.qty');
-        qtyInput.style.display = e.target.checked ? 'block' : 'none';
-        if (!e.target.checked) qtyInput.value = 1;
-
-        const checked = optionsList.querySelectorAll('.item-check:checked');
-        if (checked.length > 0) {
-          loadModel(checked[0].dataset.model);
-        } else {
-          loadModel(DEFAULT_MODEL);
-        }
-
-        updateSummary();
-        updateHighlights();
-      }
-    });
-
-    function updateSummary() {
-      const items = Array.from(optionsList.querySelectorAll('.option'));
-      const selected = [];
-      let totalQty = 0;
-
-      items.forEach(item => {
-        const check = item.querySelector('.item-check');
-        const qtyInput = item.querySelector('.qty');
-        if (check.checked && qtyInput.value >= 1) {
-          const name = check.dataset.name;
-          const sku = check.dataset.sku;
-          const qty = parseInt(qtyInput.value);
-          totalQty += qty;
-          selected.push(`${name} × ${qty}${sku ? ' (' + sku + ')' : ''}`);
-        }
-      });
-
-      summary.textContent = selected.length ? 'Wybrane: ' + selected.join(' • ') : 'Wybrane: brak';
-      hiddenInput.value = selected.length ? selected.map(s => s.replace(/ × /g, 'x')).join('; ') : '';
-      formSubject.value = totalQty ? `Zapytanie z Provercel - 3D (${totalQty} szt.)` : 'Zapytanie z Provercel - 3D';
-    }
-
-    updateSummary();
-    updateHighlights();
-
-    document.getElementById('resetView').addEventListener('click', () => {
-      mv.cameraOrbit = '0deg 75deg 2.5m';
-      mv.jumpCameraToGoal();
-    });
-
-    optionsList.addEventListener('input', (e) => {
-      if (e.target.classList.contains('qty')) {
-        let val = parseInt(e.target.value);
-        if (isNaN(val) || val < 1) e.target.value = 1;
-        updateSummary();
-      }
-    });
-
-    form.addEventListener('submit', (e) => {
-      const email = form.querySelector('input[name="client_email"]').value.trim();
-      if (!/^\S+@\S+\.\S+$/.test(email)) {
-        alert('Podaj poprawny adres e-mail.');
-        e.preventDefault();
-        return;
-      }
-      try {
-        const cam = mv.getCameraOrbit();
-        const extra = `\n\n---\nWidok 3D: obrót=${cam.theta.toFixed(0)}°, nachylenie=${cam.phi.toFixed(0)}°, odległość=${cam.radius.toFixed(2)}m`;
-        const notesField = form.querySelector('textarea[name="notes"]');
-        notesField.value = (notesField.value.trim() + extra).trim();
-      } catch (err) {}
-    });
-
-    window.addEventListener('load', () => {
-      loadModel(DEFAULT_MODEL);
-    });
-  </script>
-</body>
-</html>
+        <form id="requestForm" action="https://formsubmit.co/provercel@proton.me" method="POST
