--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Provercel — Barierowe rozwiązania 3D</title>
 
-  <!-- model-viewer -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
   <style>
@@ -22,6 +21,8 @@
       font-family:Inter, Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial;
       background:linear-gradient(180deg, var(--bg), #071019);
       color:#e6eef6;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
       min-height:100vh;
       display:flex;
       align-items:center;
@@ -40,7 +41,7 @@
       gap:20px;
       align-items:start;
     }
-    header h1{ margin:0; font-size:20px; }
+    header h1{ margin:0; font-size:20px; letter-spacing:0.2px; }
     header p{ margin:6px 0 0 0; color:var(--muted); font-size:13px; }
 
     .viewer-wrap{
@@ -52,7 +53,7 @@
       width:100%;
       height:520px;
       border-radius:8px;
-      background:#071018;
+      background:linear-gradient(180deg,#071018,#001018);
       box-shadow: inset 0 -20px 60px rgba(0,0,0,0.6);
       transition: opacity 0.3s ease;
     }
@@ -69,6 +70,7 @@
       border:1px solid rgba(255,255,255,0.03);
     }
     label.section-title{
+      display:block;
       font-weight:600;
       margin-bottom:8px;
       font-size:13px;
@@ -80,6 +82,8 @@
       gap:8px;
       max-height:240px;
       overflow:auto;
+      padding-right:6px;
+      scrollbar-gutter: stable;
     }
     .option{
       display:flex;
@@ -96,41 +100,58 @@
     .option::before {
       content: '';
       position: absolute;
-      inset: 0;
+      top: 0; left: 0; right: 0; bottom: 0;
       background: linear-gradient(90deg, rgba(0,209,255,0.12), rgba(0,180,255,0.06));
       opacity: 0;
       transition: opacity 0.3s ease;
+      pointer-events: none;
       border-radius: 8px;
     }
     .option.selected {
-      border: 1px solid rgba(0,209,255,0.5);
+      border: 1px solid rgba(0,209,255,0.5) !important;
       box-shadow: 0 0 14px rgba(0,209,255,0.25);
     }
     .option.selected::before { opacity: 1; }
     .option input[type="checkbox"]{ width:18px; height:18px; accent-color: var(--accent); }
-    .option .meta{ font-size:13px; color:var(--muted); }
+    .option .meta{font-size:13px; color:var(--muted)}
     .option .qty{
-      width:50px; padding:4px 6px; font-size:13px; border-radius:6px;
-      border:1px solid rgba(255,255,255,0.1); background:rgba(0,0,0,0.3);
-      color:#fff; text-align:center; display:none;
+      width:50px;
+      padding:4px 6px;
+      font-size:13px;
+      border-radius:6px;
+      border:1px solid rgba(255,255,255,0.1);
+      background:rgba(0,0,0,0.3);
+      color:#fff;
+      text-align:center;
+      display:none;
     }
 
     .summary{ font-size:13px; color:var(--muted); margin-top:8px; min-height:36px; }
-    form{ display:flex; flex-direction:column; gap:10px; }
-    input[type="text"], input[type="email"], textarea{
-      width:100%; padding:10px; border-radius:8px;
-      border:1px solid rgba(255,255,255,0.04); background:rgba(0,0,0,0.25);
-      color:#eaf6ff; font-size:14px;
+
+    form{display:flex; flex-direction:column; gap:10px}
+    input[type="text"], input[type="email"], textarea, select{
+      width:100%;
+      padding:10px;
+      border-radius:8px;
+      border:1px solid rgba(255,255,255,0.04);
+      background:rgba(0,0,0,0.25);
+      color:#eaf6ff;
+      font-size:14px;
     }
     button{
-      padding:10px 14px; border-radius:8px; border:none;
+      padding:10px 14px;
+      border-radius:8px;
+      border: none;
       background:linear-gradient(90deg,var(--accent), #00b4ff 80%);
-      color:#01151a; font-weight:700; cursor:pointer;
+      color:#01151a;
+      font-weight:700;
+      cursor:pointer;
       box-shadow: 0 8px 24px rgba(0,209,255,0.08);
       transition: transform 0.2s;
     }
     button:hover { transform: translateY(-1px); }
-    .small{ font-size:12px; color:var(--muted); }
+    .small{ font-size:12px; color:var(--muted) }
+
     footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
     @media (max-width:980px){
@@ -140,7 +161,7 @@
   </style>
 </head>
 <body>
-  <div class="card">
+  <div class="card" role="main">
     <div>
       <header>
         <h1>Provercel — Barierowe rozwiązania 3D</h1>
@@ -148,22 +169,30 @@
       </header>
 
       <div class="viewer-wrap" style="margin-top:12px;">
-        <!-- DZIAŁAJĄCY MODEL DOMYŚLNY -->
         <model-viewer id="mv"
-          src="https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/DamagedHelmet/glTF-Binary/DamagedHelmet.glb"
-          alt="Bariera ocynkowana"
-          camera-controls auto-rotate ar
+          src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+          alt="Stalowa bariera ocynkowana"
+          camera-controls
+          auto-rotate
+          ar
           ar-modes="webxr scene-viewer quick-look"
-          exposure="1.0" shadow-intensity="1"
+          exposure="1.2"
+          shadow-intensity="1"
+          environment-image="neutral"
           camera-orbit="0deg 75deg 2.5m">
 
-          <button slot="ar-button" style="background:#00d1ff;color:#000;border:none;padding:10px 20px;border-radius:8px;font-weight:700;margin:12px;">
+          <button slot="ar-button" style="background:#00d1ff; color:#000; border:none; padding:10px 20px; border-radius:8px; font-weight:700; margin:12px;">
             Zobacz w AR
           </button>
+
+          <div slot="fallback" style="text-align:center; padding:20px; color:#aaa; font-size:14px;">
+            Model nie załadował się. <br>
+            <a href="#" onclick="location.reload()" style="color:#00d1ff; text-decoration:underline;">Odśwież</a>
+          </div>
         </model-viewer>
       </div>
 
-      <div style="margin-top:14px;display:flex;gap:10px;align-items:center;">
+      <div style="margin-top:14px; display:flex; gap:10px; align-items:center;">
         <button type="button" id="resetView">Resetuj widok</button>
         <div class="small">Obracaj myszką, przybliż gestem.</div>
       </div>
@@ -173,11 +202,10 @@
       <div class="panel">
         <label class="section-title">Wybierz elementy</label>
         <div class="options" id="optionsList">
-
           <!-- SŁUP -->
           <label class="option">
-            <input type="checkbox" class="item-check" data-name="Słup stalowy H=1000" data-sku="SLP-1000"
-                   data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/MetalRoughSpheres/glTF-Binary/MetalRoughSpheres.glb">
+            <input type="checkbox" class="item-check" data-name="Słup stalowy H=1000" data-sku="SLP-1000" 
+                   data-model="https://modelviewer.dev/shared-assets/models/MetalRoughSpheres.glb">
             <div style="flex:1">
               <div><strong>Słup stalowy H=1000</strong></div>
               <div class="meta">SKU: SLP-1000 • Ø 60 mm • ocynk</div>
@@ -187,8 +215,8 @@
 
           <!-- PRZĘSŁO -->
           <label class="option">
-            <input type="checkbox" class="item-check" data-name="Przęsło proste 2m" data-sku="PRZ-2000"
-                   data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Lantern/glTF-Binary/Lantern.glb">
+            <input type="checkbox" class="item-check" data-name="Przęsło proste 2m" data-sku="PRZ-2000" 
+                   data-model="https://modelviewer.dev/shared-assets/models/RobotExpressive.glb">
             <div style="flex:1">
               <div><strong>Przęsło proste 2m</strong></div>
               <div class="meta">SKU: PRZ-2000 • siatka 50x50 • ocynk</div>
@@ -198,8 +226,8 @@
 
           <!-- ZŁĄCZE -->
           <label class="option">
-            <input type="checkbox" class="item-check" data-name="Złącze kątowe 90°" data-sku="ZLK-090"
-                   data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/BoomBox/glTF-Binary/BoomBox.glb">
+            <input type="checkbox" class="item-check" data-name="Złącze kątowe 90°" data-sku="ZLK-090" 
+                   data-model="https://modelviewer.dev/shared-assets/models/Car.glb">
             <div style="flex:1">
               <div><strong>Złącze kątowe 90°</strong></div>
               <div class="meta">SKU: ZLK-090 • śruby M8 • ocynk</div>
@@ -209,8 +237,8 @@
 
           <!-- STOPKA -->
           <label class="option">
-            <input type="checkbox" class="item-check" data-name="Stopka montażowa 150mm" data-sku="STP-150"
-                   data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/WaterBottle/glTF-Binary/WaterBottle.glb">
+            <input type="checkbox" class="item-check" data-name="Stopka montażowa 150mm" data-sku="STP-150" 
+                   data-model="https://modelviewer.dev/shared-assets/models/Toaster.glb">
             <div style="flex:1">
               <div><strong>Stopka montażowa 150mm</strong></div>
               <div class="meta">SKU: STP-150 • 4 otwory • ocynk</div>
@@ -220,8 +248,8 @@
 
           <!-- OSŁONA -->
           <label class="option">
-            <input type="checkbox" class="item-check" data-name="Osłona krawędziowa" data-sku="OSL-001"
-                   data-model="https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/FlightHelmet/glTF-Binary/FlightHelmet.glb">
+            <input type="checkbox" class="item-check" data-name="Osłona krawędziowa" data-sku="OSL-001" 
+                   data-model="https://modelviewer.dev/shared-assets/models/Helmet.glb">
             <div style="flex:1">
               <div><strong>Osłona krawędziowa</strong></div>
               <div class="meta">SKU: OSL-001 • guma + stal</div>
@@ -235,4 +263,135 @@
 
       <div class="panel">
         <label class="section-title">Szczegóły zapytania</label>
-        <form id="requestForm" action="https://formsubmit.co/provercel@proton.me" method="POST
+        <form id="requestForm" action="https://formsubmit.co/provercel@proton.me" method="POST">
+          <input type="text" name="_honey" style="display:none">
+          <input type="hidden" name="_next" value="https://provercel.vercel.app/">
+          <input type="hidden" name="_subject" id="formSubject" value="Zapytanie z Provercel - 3D">
+
+          <label class="small">Firma / Imię</label>
+          <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" />
+
+          <label class="small">Adres e-mail</label>
+          <input type="email" name="client_email" placeholder="twoj@proton.me" required />
+
+          <label class="small">Uwagi</label>
+          <textarea name="notes" rows="3" placeholder="Dodatkowe informacje (termin, montaż, itp.)"></textarea>
+
+          <input type="hidden" name="selected_items" id="selected_items" value="">
+
+          <button type="submit">Wyślij zapytanie</button>
+        </form>
+
+        <footer>
+          <div class="small">Wiadomości na <strong>provercel@proton.me</strong>.</div>
+        </footer>
+      </div>
+    </aside>
+  </div>
+
+  <script>
+    const mv = document.getElementById('mv');
+    const optionsList = document.getElementById('optionsList');
+    const summary = document.getElementById('summary');
+    const hiddenInput = document.getElementById('selected_items');
+    const formSubject = document.getElementById('formSubject');
+    const form = document.getElementById('requestForm');
+
+    const DEFAULT_MODEL = 'https://modelviewer.dev/shared-assets/models/Astronaut.glb';
+
+    function loadModel(src) {
+      if (mv.src === src) return;
+      mv.style.opacity = '0.5';
+      mv.src = src;
+      mv.addEventListener('load', () => {
+        mv.style.opacity = '1';
+        mv.cameraOrbit = '0deg 75deg 2.5m';
+        mv.jumpCameraToGoal();
+      }, { once: true });
+    }
+
+    function updateHighlights() {
+      const options = optionsList.querySelectorAll('.option');
+      options.forEach(option => {
+        const checkbox = option.querySelector('.item-check');
+        option.classList.toggle('selected', checkbox.checked);
+      });
+    }
+
+    optionsList.addEventListener('change', (e) => {
+      if (e.target.classList.contains('item-check')) {
+        const qtyInput = e.target.closest('.option').querySelector('.qty');
+        qtyInput.style.display = e.target.checked ? 'block' : 'none';
+        if (!e.target.checked) qtyInput.value = 1;
+
+        const checked = optionsList.querySelectorAll('.item-check:checked');
+        if (checked.length > 0) {
+          loadModel(checked[0].dataset.model);
+        } else {
+          loadModel(DEFAULT_MODEL);
+        }
+
+        updateSummary();
+        updateHighlights();
+      }
+    });
+
+    function updateSummary() {
+      const items = Array.from(optionsList.querySelectorAll('.option'));
+      const selected = [];
+      let totalQty = 0;
+
+      items.forEach(item => {
+        const check = item.querySelector('.item-check');
+        const qtyInput = item.querySelector('.qty');
+        if (check.checked && qtyInput.value >= 1) {
+          const name = check.dataset.name;
+          const sku = check.dataset.sku;
+          const qty = parseInt(qtyInput.value);
+          totalQty += qty;
+          selected.push(`${name} × ${qty}${sku ? ' (' + sku + ')' : ''}`);
+        }
+      });
+
+      summary.textContent = selected.length ? 'Wybrane: ' + selected.join(' • ') : 'Wybrane: brak';
+      hiddenInput.value = selected.length ? selected.map(s => s.replace(/ × /g, 'x')).join('; ') : '';
+      formSubject.value = totalQty ? `Zapytanie z Provercel - 3D (${totalQty} szt.)` : 'Zapytanie z Provercel - 3D';
+    }
+
+    updateSummary();
+    updateHighlights();
+
+    document.getElementById('resetView').addEventListener('click', () => {
+      mv.cameraOrbit = '0deg 75deg 2.5m';
+      mv.jumpCameraToGoal();
+    });
+
+    optionsList.addEventListener('input', (e) => {
+      if (e.target.classList.contains('qty')) {
+        let val = parseInt(e.target.value);
+        if (isNaN(val) || val < 1) e.target.value = 1;
+        updateSummary();
+      }
+    });
+
+    form.addEventListener('submit', (e) => {
+      const email = form.querySelector('input[name="client_email"]').value.trim();
+      if (!/^\S+@\S+\.\S+$/.test(email)) {
+        alert('Podaj poprawny adres e-mail.');
+        e.preventDefault();
+        return;
+      }
+      try {
+        const cam = mv.getCameraOrbit();
+        const extra = `\n\n---\nWidok 3D: obrót=${cam.theta.toFixed(0)}°, nachylenie=${cam.phi.toFixed(0)}°, odległość=${cam.radius.toFixed(2)}m`;
+        const notesField = form.querySelector('textarea[name="notes"]');
+        notesField.value = (notesField.value.trim() + extra).trim();
+      } catch (err) {}
+    });
+
+    window.addEventListener('load', () => {
+      loadModel(DEFAULT_MODEL);
+    });
+  </script>
+</body>
+</html>
